examples/kamwiel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kamwiel
  labels:
    app: kamwiel
spec:
  selector:
    matchLabels:
      app: kamwiel
  template:
    metadata:
      labels:
        app: kamwiel
    spec:
      containers:
        - name: kamwiel
          image: quay.io/didierofrivia/kamwiel:latest
          env:
            - name: PORT
              value: "3000"
          ports:
            - containerPort: 3000
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: kamwiel
spec:
  selector:
    app: kamwiel
  ports:
    - port: 3000
      protocol: TCP
